--- a/.github/workflows/windows_release.yml
+++ b/.github/workflows/windows_release.yml
@@ -68,7 +68,7 @@ jobs:
       - name: (8) Build
         working-directory: ${{ runner.temp }}\build
         run:  |
-              qmake -r ${{ env.SOURCE_DIR }}\planets-qml.pro
+              cmake -r ${{ env.SOURCE_DIR }}\CMakeLists.txt
               ${{ runner.temp }}\jom\jom -j2
               cd release
               windeployqt --qmldir ${{ env.SOURCE_DIR }} nahidanotes.exe --pdb --release --compiler-runtime
