--- a/.github/workflows/windows_release.yml
+++ b/.github/workflows/windows_release.yml
@@ -52,10 +52,10 @@ jobs:
       - name: (5) Build
         run: |
           cmake -B ${{ runner.temp }}/build -S ${{ env.SOURCE_DIR }}
-          cmake --build ${{ runner.temp }}/build --config Release --target ALL_BUILD
+          cmake --build ${{ runner.temp }}/build --config Release --target NahidaNotes
 
       - name: (6) Zip build
-        run: Compress-Archive -Path ${{ runner.temp }}/build/* -DestinationPath ${{ runner.temp }}/${{ env.ARTIFACT }}
+        run: Compress-Archive -Path ${{ runner.temp }}/build/NahidaNotes.exe -DestinationPath ${{ runner.temp }}/${{ env.ARTIFACT }}
 
       - name: (7) Save build artifact
         uses: actions/upload-artifact@v2
